--- a/src/main/resources/com/example/pokemonbattle/view/menu.fxml
+++ b/src/main/resources/com/example/pokemonbattle/view/menu.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<!-- 
+  Main Menu Screen
+  Provides access to all game features
+-->
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.example.pokemonbattle.controller.MenuController"
+      style="-fx-background-color: linear-gradient(to bottom, #3a7bd5, #00d2ff);">
+  <padding>
+    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
+  </padding>
 
-</AnchorPane>
+  <!-- Title -->
+  <Label text="MAIN MENU" styleClass="title-label"/>
+
+  <!-- Spacer -->
+  <Label text=" "/>
+
+  <!-- Menu Buttons -->
+  <Button text="New Game" onAction="#onNewGameButtonClick" prefWidth="250" styleClass="button-red"/>
+
+  <Button text="Load Game" onAction="#onLoadGameButtonClick" prefWidth="250" styleClass="button-blue"/>
+
+  <Button text="Settings" onAction="#onSettingsButtonClick" prefWidth="250" styleClass="button-purple"/>
+
+  <Button text="Back" onAction="#onBackButtonClick" prefWidth="250" styleClass="button-gray"/>
+
+  <Button text="Exit" onAction="#onExitButtonClick" prefWidth="250" styleClass="button-dark"/>
+</VBox>
