--- a/src/main/resources/com/example/pokemonbattle/css/style.css
+++ b/src/main/resources/com/example/pokemonbattle/css/style.css
@@ -131,14 +131,14 @@
 
 
 .start-container {
-    -fx-background-image: url("/com/example/pokemonbattle/assets/start_bg.jpg");
+    /* -fx-background-image: url('/com/example/pokemonbattle/assets/start_bg.png'); */
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
 
 .welcome-container {
-    -fx-background-image: url("/com/example/pokemonbattle/assets/wc_bg.jpg");
+    -fx-background-image: url("/com/example/pokemonbattle/assets/wc_bg.png");
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
@@ -147,7 +147,7 @@
 
 
 .menu-container {
-    -fx-background-image: url("/com/example/pokemonbattle/assets/menu1.jpg");
+    -fx-background-image: url("/com/example/pokemonbattle/assets/menu1.png");
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
