--- a/src/main/resources/com/example/pokemonbattle/view/start.fxml
+++ b/src/main/resources/com/example/pokemonbattle/view/start.fxml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="30.0" 
-      xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.pokemonbattle.controller.StartController"
-      styleClass="start-container"
-      minWidth="800" minHeight="600">
-  <padding>
-    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
-  </padding>
+<VBox accessibleRole="IMAGE_VIEW" alignment="CENTER" minHeight="600" minWidth="800" spacing="30.0" styleClass="start-container" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pokemonbattle.controller.StartController">
+  <children>
 
-  <!-- Game Title
-  <Label fx:id="titleLabel" text="POKEMON BATTLE" styleClass="title-label"/> -->
+    <StackPane fx:id="rootPane" VBox.vgrow="ALWAYS">
 
-  <!-- Loading Message -->
-  <!-- <Label fx:id="loadingLabel" text="Loading..." styleClass="subtitle-label"/> -->
+        <!-- Background image -->
+        <ImageView fx:id="bgImage"
+                   preserveRatio="false"
+                   pickOnBounds="true">
+            <image>
+                <Image url="@../assets/start_bg.png"/>
+            </image>
+        </ImageView>
 
-  <!-- Skip Button (optional - allows skipping splash screen) -->
-  <Button text="Press to Start" onAction="#onStartButtonClick" styleClass="button-orange"/>
+        <!-- Centered Start Button -->
+        <Button text="Press to Start"
+                onAction="#onStartButtonClick"
+                prefWidth="300"
+                prefHeight="70"
+                styleClass="button-orange"/>
+    </StackPane>
+
+</children>
+
 </VBox>
