--- a/src/main/resources/com/example/pokemonbattle/css/style.css
+++ b/src/main/resources/com/example/pokemonbattle/css/style.css
@@ -129,27 +129,15 @@
     -fx-effect: dropshadow(gaussian, rgba(0, 150, 120, 0.4), 8, 0, 0, 1);
 }
 
-
+/* Container styles - background images now handled via FXML ImageView */
 .start-container {
-    /* -fx-background-image: url('/com/example/pokemonbattle/assets/start_bg.png'); */
-    -fx-background-size: cover;
-    -fx-background-repeat: no-repeat;
-    -fx-background-position: center;
+    /* Background image handled via FXML StackPane + ImageView */
 }
 
 .welcome-container {
-    -fx-background-image: url("/com/example/pokemonbattle/assets/wc_bg.png");
-    -fx-background-size: cover;
-    -fx-background-repeat: no-repeat;
-    -fx-background-position: center;
-    /* -fx-background-color: rgba(50, 150, 130, 0.2); semi-transparent overlay */
+    /* Background image handled via FXML StackPane + ImageView */
 }
 
-
 .menu-container {
-    -fx-background-image: url("/com/example/pokemonbattle/assets/menu1.png");
-    -fx-background-size: cover;
-    -fx-background-repeat: no-repeat;
-    -fx-background-position: center;
-    /* -fx-background-color: rgba(155, 229, 212, 0.2); semi-transparent overlay */
+    /* Background image handled via FXML StackPane + ImageView */
 }
