--- a/src/main/resources/com/example/pokemonbattle/view/wc.fxml
+++ b/src/main/resources/com/example/pokemonbattle/view/wc.fxml
@@ -1,39 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <!-- 
   Welcome Screen
   Collects player name before proceeding to main menu
 -->
-<VBox alignment="CENTER" spacing="25.0" 
-      xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.pokemonbattle.controller.WcController"
-      styleClass="welcome-container"
-      minWidth="900" minHeight="700">
-  <padding>
-    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
-  </padding>
+<VBox alignment="CENTER" minHeight="700" minWidth="900" spacing="30.0" 
+      styleClass="welcome-container" 
+      stylesheets="@../css/style.css" 
+      xmlns="http://javafx.com/javafx/25" 
+      xmlns:fx="http://javafx.com/fxml/1" 
+      fx:controller="com.example.pokemonbattle.controller.WcController">
+  <children>
 
-  <!-- Welcome Message -->
-  <Label text="Welcome, Trainer!" styleClass="title-label"/>
+    <StackPane fx:id="rootPane" VBox.vgrow="ALWAYS">
 
-  <!-- Instructions -->
-  <Label text="Enter your name to begin your journey:" styleClass="subtitle-label"/>
+        <!-- Background image -->
+        <ImageView fx:id="bgImage"
+                   preserveRatio="false"
+                   pickOnBounds="true">
+            <image>
+                <Image url="@../assets/wc_bg.png"/>
+            </image>
+        </ImageView>
 
-  <!-- Player Name Input -->
-  <TextField fx:id="playerNameField" promptText="Your Name" maxWidth="300"/>
+        <!-- Content overlay -->
+        <VBox alignment="CENTER" spacing="25.0">
+          <padding>
+            <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
+          </padding>
 
-  <!-- Button Container -->
-  <HBox spacing="15.0" alignment="CENTER">
-    <Button text="Back" onAction="#onBackButtonClick" styleClass="button-gray"/>
-    <Button text="Continue" onAction="#onContinueButtonClick" styleClass="button-green"/>
-  </HBox>
+          <!-- Welcome Message -->
+          <Label text="Welcome, Trainer!" styleClass="title-label"/>
+
+          <!-- Instructions -->
+          <Label text="Enter your name to begin your journey:" styleClass="subtitle-label"/>
+
+          <!-- Player Name Input -->
+          <TextField fx:id="playerNameField" promptText="Your Name" maxWidth="300"/>
+
+          <!-- Button Container -->
+          <HBox spacing="15.0" alignment="CENTER">
+            <Button text="Back" onAction="#onBackButtonClick" styleClass="button-gray"/>
+            <Button text="Continue" onAction="#onContinueButtonClick" styleClass="button-green"/>
+          </HBox>
+        </VBox>
+
+    </StackPane>
+
+  </children>
 </VBox>
